--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@webcomponents/webcomponentsjs": "^2.4.3",
-    "graphql": "^15.0.0",
+    "graphiql": "^1.4.2",
+    "graphql": "^15.5.1",
     "graphql.macro": "^1.4.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
